--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 _site
 .sass-cache
 .jekyll-metadata
+
+/bower_components/
+/node_modules/
+/.pulp-cache/
+/output/
+/generated-docs/
+/.psc-package/
+/.psc*
+/.purs*
+/.psa*
+/.spago
